@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-AC_REVISION($Revision: 1.83.2.5.2.4 $)
+AC_REVISION($Revision: 1.83.2.5.2.5 $)
 
 AC_INIT(resolv/herror.c)
 AC_PREREQ(2.13)
@@ -2299,11 +2299,13 @@ AC_SUBST(INNETGR_ARGS)
 # Random remaining OS-specific issues involving compiler warnings.
 # XXXDCL print messages to indicate some compensation is being done?
 #
-AC_SUBST(ISC_PLATFORM_BRACEPTHREADONCEINIT)
-ISC_PLATFORM_BRACEPTHREADONCEINIT="#undef ISC_PLATFORM_BRACEPTHREADONCEINIT"
 BROKEN_IN6ADDR_INIT_MACROS="#undef BROKEN_IN6ADDR_INIT_MACROS"
 
 case "$host" in
+	*-aix5.1.*)
+		hack_shutup_pthreadmutexinit=yes
+		hack_shutup_in6addr_init_macros=yes
+		;;
 	*-bsdi3.1*)
 		hack_shutup_sputaux=yes
 		;;
@@ -2316,17 +2318,18 @@ case "$host" in
 		hack_shutup_stdargcast=yes
 		;;
 	*-solaris2.8)
-		hack_shutup_pthreadonceinit=yes
+		hack_shutup_pthreadmutexinit=yes
 		hack_shutup_in6addr_init_macros=yes
 		;;
 esac
 
-case "$hack_shutup_pthreadonceinit" in
+case "$hack_shutup_pthreadmutexinit" in
 	yes)
 		#
-		# Shut up PTHREAD_ONCE_INIT unbraced initializer warnings.
+		# Shut up PTHREAD_MUTEX_INITIALIZER unbraced
+		# initializer warnings.
 		#
-		ISC_PLATFORM_BRACEPTHREADONCEINIT="#define ISC_PLATFORM_BRACEPTHREADONCEINIT 1"
+		AC_DEFINE(SHUTUP_MUTEX_INITIALIZER)
 		;;
 esac
 
