@@ -86,7 +86,7 @@
 
 /*
  *      @(#)netdb.h	8.1 (Berkeley) 6/2/93
- *	$Id: netdb.h,v 1.12.2.1.4.4 2004/03/16 02:19:19 marka Exp $
+ *	$Id: netdb.h,v 1.12.2.1.4.5 2004/11/30 01:15:42 marka Exp $
  */
 
 #ifndef _NETDB_H_
@@ -526,6 +526,9 @@ void		endservent_r __P((void));
 
 #ifdef __GLIBC__
 int		getnetgrent_r __P((char **, char **, char **, char *, size_t));
+#endif
+#ifdef _AIX
+int		setnetgrent_r __P((char *, void **));
 #endif
 
 #endif
